# text-editor

./: Cargo.toml  README.md
src/: editor.rs  main.rs  terminal.rs
