[package]
name = "text-editor"
version = "0.0.1"
description = "Modal text editor (Vim inspired)"
repository = "https://github.com/muhamadgameel/text-editor"
authors = ["Muhamad Gameel <mgameel@pm.me>"]
readme = "README.md"
license = "MIT"
keywords = ["text", "editor", "vim", "ide"]
edition = "2021"
categories = ["development-tools"]

[dependencies]
termion = "1.5.*"
